# vllm_learning_lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: experiment.md
.github/workflows/: ci.yml
configs/experiments/: exp_001_baseline.yaml
configs/models/: qwen3_0_6b.yaml
configs/serving/: local_server.yaml
configs/training/: sft_lora_qwen.yaml
data/: README.md
docs/: COLLABORATION.md  ENVIRONMENT.md  EXPERIMENTS.md  LEARNING_PLAN.md  VLLM_NOTES.md
experiments/exp_001_baseline/: README.md  command.sh  config.yaml  results.md
experiments/template/: README.md  config.yaml  results.md
scripts/: check_env.py  client_chat.py  new_experiment.py  run_offline.py  serve_openai.py  train_sft_lora.py
src/vllm_lab/: __init__.py  config.py  experiments.py  prompts.py
src/vllm_lab/eval/: metrics.py
src/vllm_lab/inference/: offline_runner.py  openai_client.py
src/vllm_lab/training/: __init__.py  dataset.py  sft_lora.py
src/vllm_lab/utils/: logging.py
tests/: test_config.py  test_experiments.py  test_smoke.py
