[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-learning-lab"
version = "0.1.0"
description = "A small learning lab for vLLM offline inference, serving, and SFT/LoRA scaffolding."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vllm",
    "pyyaml",
    "pydantic",
    "openai",
    "rich",
]

[project.optional-dependencies]
train = [
    "transformers",
    "datasets",
    "trl",
    "peft",
    "accelerate",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
